2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (grub_module_header): Make type into uint32 as
	expected by grub-mkimage and it's more clear since there is no implicit
	padding.

2011-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (scan_devices): Don't derference NULL on whole
	disk.
	* grub-core/disk/lvm.c (do_lvm_scan): Likewise.

2011-11-03  Philipp Matthias Hahn <pmhahn@debian.org>

	* util/grub-mkrescue.in: Fix handling xorriso option.

2011-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (grub_gettext_init_ext): Exit if local is
	NULL.

2011-11-03  crocket <crockabiscuit@gmail.com>

	* util/grub.d/10_linux.in: Add Slackware initrd naming.

2011-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	XZ CRC64 and SHA256 support.

	* Makefile.util.def (libgrubmods): Add crc64.c.
	* grub-core/Makefile.core.def (crc64): New module.
	* grub-core/lib/crc64.c: New file.
	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_hash)
	[!GRUB_EMBED_DECOMPRESSOR]: Rename crc32_context to hash_context.
	Fix the type.
	(MAX_HASH_SIZE): New define.
	(xz_dec) [!GRUB_EMBED_DECOMPRESSOR]: Add generic hash fields.
	(dec_block) [!GRUB_EMBED_DECOMPRESSOR]: Handle non-crc32 hashes.
	(index_update) [!GRUB_EMBED_DECOMPRESSOR]: Likewise.
	(dec_index) [!GRUB_EMBED_DECOMPRESSOR]: Likewise.
	(crc32_validate) [!GRUB_EMBED_DECOMPRESSOR]: Rename to ...
	(hash_validate) [!GRUB_EMBED_DECOMPRESSOR]: ... this.
	Handle non-crc32 hashes.
	(hashes) [!GRUB_EMBED_DECOMPRESSOR]: New variable.
	(dec_stream_header): Handle non-crc32 hashes.
	(dec_stream_footer): Likewise.
	(dec_block_header): Likewise.
	(dec_main): Likewise.
	(xz_dec_init): Likewise.
	(xz_dec_reset): Likewise.
	(xz_dec_end): Likewise.
	* util/import_gcry.py: Add CRC64 line.

2011-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_mtime) [MODE_UFS2]: Check mtime field
	as well.

2011-11-03  Vladimir Serbinenko  <phcoder@gmail.com>